# solver-director

./: .gitignore  .trivyignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  skaffold.yaml
.github/workflows/: ci.yaml  push.yaml
alembic/: env.py
alembic/versions/: 1513f5e747aa_add_resource_limits.py  176f933b48d6_change_problem_group_to_many_to_many.py  31032b007022_.py  3c13f4b81484_.py  3e931dc59b58_change_solver_name_to_names_array.py  5325ffcb2960_.py  58637ddda2a5_.py  a05851794b57_.py  a535e52886b1_.py  ac63395dc6e3_initial_schema.py  b0039aa70bca_.py  da6e1e772ff5_add_is_complete_to_projects.py  dde4e526e30f_add_projects_table.py  e62ef276a868_.py  e6a5a48b2f75_initial_migration.py  f1fb59f4d61e_.py
helm/: values-prod.yaml  values.yaml
helm/app/: Chart.yaml  values-dev.yaml  values.yaml
helm/database/: values.yaml
helm/solver-director/: values-dev.yaml  values-prod.yaml
helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  migration-job.yaml  postgres-deployment.yaml  postgres-pv.yaml  postgres-pvc.yaml  postgres-service.yaml  secret-appdb.yaml  service-account.yaml  service.yaml
scripts/: generate_migration.sh  setup.py  upgrade_db.sh  upload_groups.py  upload_problems.py
src/: app.py  auth.py  config.py  database.py  main.py  models.py  rabbitmq_auth.py  schemas.py  utils.py
src/model/: user.py  (+2 more)
tests/: conftest.py  test__a.py  test_auth.py  test_database.py  test_groups.py  test_health.py  test_instances.py  test_metrics.py  test_problems.py  test_projects.py  test_queue_drain.py  test_resource_models.py  test_resources.py  test_solvers.py
(+27 files in other folders)
