[project]
name = "solver-director"
version = "0.1.0"
dependencies = [
    "fastapi[standard]>=0.120,<0.121",
    "prometheus-fastapi-instrumentator>=7.1.0,<8.0",
    "psycopg2-binary>=2.9.11,<3.0",
    "sqlalchemy>=2.0.44,<3.0",
    "alembic>=1.0,<2.0",
    "gunicorn>=23.0,<24.0",
    "kubernetes>=34.1,<35.0",
    "requests>=2.32.5,<3.0",
    "pika>=1,<2.0",
    "aio-pika>=9.0,<10.0",
    "dacite>=1.8,<2.0",
    "psp-auth>=1.1.0,<2.0",
    "asyncpg>=0.31.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "pytest-mock>=3.15,<4.0",
    "ruff>=0.14.1,<0.15.0",
    "bandit>=1.8,<2.0",
    "pip-audit>=2.9,<3.0",
    "httpx>=0.28.1,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
